# kanasim

./: .gitignore  README.ja.md  README.md  pyproject.toml
.github/workflows/: python-check.yaml  release.yaml
scripts/: calculate_weighted_edit_distance.py  create_feature_distance_csv.py  create_hmm_distance_csv.py  create_kana_distance_csv.py  create_monophone_distance_csv.py  sort_by_edit_distance.py  sort_by_hamming_distance.py  sort_by_weighted_edit_distance.py
src/kanasim/: __init__.py  kanasim.py
src/kanasim/data/biphone/: distance_consonants_bi.csv  distance_vowels_bi.csv
src/kanasim/data/features/: consonant_features.csv  distance_consonants_mono_features.csv
src/kanasim/data/monophone/: distance_consonants_mono_avg.csv  distance_consonants_mono_hmm.csv  distance_vowels_mono_avg.csv  distance_vowels_mono_hmm.csv
tests/: test_kanasim.py
