[project]
name = "kanasim"
version = "0.0.0"
description = "Calculator of phonetic similarity (distance) between Japanese kana characters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jamorasep>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"