[project]
name = "kanasim"
dynamic = ["version"]
description = "Calculator of phonetic similarity (distance) between Japanese kana characters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "editdistance>=0.8.1",
    "jamorasep>=0.0.1",
]
authors = [
    { name="shimajiroxyz" },
]
keywords = ["phonome", "kana", "distance", "similarity"]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/jiroshimaya/kanasim" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "ipython>=8.28.0",
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
    "taskipy>=1.13.0",
    "ty>=0.0.29",
]
[tool.taskipy.tasks]
test = "pytest"
lint = "uvx ruff check ."
typecheck = "ty check"
format = "uvx ruff format ."
act-sample = "act -j publish -W .github/workflows/publish-to-testpypi.yaml -e tests/workflow/event.json"
